--- a/css/main.css
+++ b/css/main.css
@@ -179,8 +179,6 @@ h5{
 #text-post-5{
 }
 
-
-
 .blog-sidebar{
 	color: #1c5f15;
 	font-size: 18px;
@@ -219,6 +217,21 @@ img.expanded-article {
 	padding: 20px;
 }
 
+.video-container {
+	position:relative;
+	padding-bottom:56.25%;
+	padding-top:30px;
+	height:0;
+	overflow:hidden;
+}
+
+.video-container iframe, .video-container object, .video-container embed {
+	position:absolute;
+	top:0;
+	left:0;
+	width:100%;
+	height:100%;
+}
 
 
 /*==========  Mobile First Method  ==========*/
