--- a/css/main.css
+++ b/css/main.css
@@ -224,9 +224,6 @@ h5{
 	background-size: 145px;
 }
 
-
-
-
 .blog-sidebar{
 	color: #1c5f15;
 	font-size: 18px;
@@ -254,7 +251,6 @@ ul {
 	padding: 20px;
 }
 
-
 .expanded-article {
 	color: #1c5f15;
 	font-size: 18px;
@@ -279,6 +275,18 @@ img.expanded-article {
 	left:0;
 	width:100%;
 	height:100%;
+}
+
+.paypal-button-lateral {
+	border: none;
+	background-color: white;
+	text-align: right;
+}
+
+.paypal-button-navbar {
+	border: none;
+	background-color: white;
+	text-align: right;
 }
 
 
