Small flags invisible on small screen

--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,6 @@ a:visited{
 	margin: 0px;
 }
 
-
 .blog-post{
 	color:white;
 	margin:10px;
@@ -308,6 +307,10 @@ img.expanded-article {
 	.blog-sidebar a{
 		font-size: 25px;
 	}
+	.flag-collapsed{
+	height: 0px;
+	display: none; /* Forcing flags to disappear */
+	}
 }
 /* Extra Small Devices, Phones */
 @media only screen and (min-width : 480px) {
@@ -326,6 +329,10 @@ img.expanded-article {
 	.facebook-post{
 		display: none;
 	}
+	.flag-collapsed{
+	height: 0px;
+	display: none; /* Forcing flags to disappear */
+	}
 }
 /* Small Devices, Tablets */
 @media only screen and (min-width : 768px) {
@@ -343,6 +350,12 @@ img.expanded-article {
 	}
 	.blog-sidebar a{
 		font-size: 15px;
+	}
+	.flag-collapsed{
+	height: 30px;
+	padding: 0px;
+	margin:  0px;
+	display: block;
 	}
 }
 /* Medium Devices, Desktops */
@@ -368,6 +381,12 @@ img.expanded-article {
 	.blog-sidebar a{
 		font-size: 15px;
 	}
+	.flag-collapsed{
+	height: 30px;
+	padding: 0px;
+	margin:  0px;
+	display: block;
+	}
 }
 /* Large Devices, Wide Screens */
 @media only screen and (min-width : 1200px) {
@@ -391,6 +410,12 @@ img.expanded-article {
 	}
 	.blog-sidebar a{
 		font-size: 15px;
+	}
+	.flag-collapsed{
+	height: 30px;
+	padding: 0px;
+	margin:  0px;
+	display: block;
 	}
 }
 
