--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@ a:visited{
 }
 
 #text-logo {
-	font-family: "Bradley Hand", "Comic Sans MS", "Noteworthy";
+	font-family: "Bradley Hand", "Dancing Script", "Comic Sans MS", "Noteworthy";
 	color: #1c5f15;
 	font-size: 20px;
 }
@@ -139,7 +139,7 @@ h5{
 }
 
 #post-2{
-	background-image: url(../images/calendari.jpg);
+	background-image: url(../images/logo_teaming.png);
 	background-size: 145px;
 }
 
@@ -223,10 +223,12 @@ h5{
 	background-size: 145px;
 }
 
+/*
 .blog-sidebar{
 	color: #1c5f15;
 	font-size: 18px;
 }
+*/
 
 .icon{
 	width: 10px;
@@ -276,16 +278,31 @@ img.expanded-article {
 	height:100%;
 }
 
+/*
 .paypal-button-lateral {
 	border: none;
+	border-radius:0;
 	background-color: white;
 	text-align: right;
 }
+*/
 
 .paypal-button-navbar {
 	border: none;
 	background-color: white;
 	text-align: right;
+}
+
+.modal-title{
+	font-size: 150%;
+}
+
+.modal-body {
+	font-size: 120%;
+}
+
+.bank-account-text{
+	font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace;
 }
 
 
@@ -304,12 +321,16 @@ img.expanded-article {
 	.icon{
 		width: 50px;
 	}
-	.blog-sidebar a{
-		font-size: 25px;
+	.blog-sidebar{
+		color: #1c5f15;
+		font-size: 20px;
+		border: none;
+		border-radius:0;
+		background-color: white;
 	}
 	.flag-collapsed{
-	height: 0px;
-	display: none; /* Forcing flags to disappear */
+		height: 0px;
+		display: none; /* Forcing flags to disappear */
 	}
 }
 /* Extra Small Devices, Phones */
@@ -320,8 +341,12 @@ img.expanded-article {
 	.icon{
 		width: 50px;
 	}
-	.blog-sidebar a{
-		font-size: 25px;
+	.blog-sidebar{
+		color: #1c5f15;
+		font-size: 20px;
+		border: none;
+		border-radius:0;
+		background-color: white;
 	}
 	#links-collection{
 		display: none;
@@ -330,8 +355,8 @@ img.expanded-article {
 		display: none;
 	}
 	.flag-collapsed{
-	height: 0px;
-	display: none; /* Forcing flags to disappear */
+		height: 0px;
+		display: none; /* Forcing flags to disappear */
 	}
 }
 /* Small Devices, Tablets */
@@ -348,14 +373,18 @@ img.expanded-article {
 	.icon{
 		width: 40px;
 	}
-	.blog-sidebar a{
+	.blog-sidebar{
+		color: #1c5f15;
 		font-size: 15px;
+		border: none;
+		border-radius:0;
+		background-color: white;
 	}
 	.flag-collapsed{
-	height: 30px;
-	padding: 0px;
-	margin:  0px;
-	display: block;
+		height: 30px;
+		padding: 0px;
+		margin:  0px;
+		display: block;
 	}
 }
 /* Medium Devices, Desktops */
@@ -378,14 +407,18 @@ img.expanded-article {
 	.icon{
 		width: 40px;
 	}
-	.blog-sidebar a{
+	.blog-sidebar{
+		color: #1c5f15;
 		font-size: 15px;
+		border: none;
+		border-radius:0;
+		background-color: white;
 	}
 	.flag-collapsed{
-	height: 30px;
-	padding: 0px;
-	margin:  0px;
-	display: block;
+		height: 30px;
+		padding: 0px;
+		margin:  0px;
+		display: block;
 	}
 }
 /* Large Devices, Wide Screens */
@@ -408,14 +441,18 @@ img.expanded-article {
 	.icon{
 		width: 40px;
 	}
-	.blog-sidebar a{
+	.blog-sidebar{
+		color: #1c5f15;
 		font-size: 15px;
+		border: none;
+		border-radius:0;
+		background-color: white;
 	}
 	.flag-collapsed{
-	height: 30px;
-	padding: 0px;
-	margin:  0px;
-	display: block;
+		height: 30px;
+		padding: 0px;
+		margin:  0px;
+		display: block;
 	}
 }
 
