New page voluntaris.html and links

--- a/css/main.css
+++ b/css/main.css
@@ -188,7 +188,7 @@ h5{
 }
 
 #entitat-2{
-	background-image: url(http://www.tierheim-tarragona.de/Tierheim_Tarragona/Willkommen_files/IMG_0135.jpg);
+	background-image: url(../images/logo-tierheim-tarragona.jpg);
 	background-size: 150px;
 }
 
